[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/base-nodes/menu-panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/base-nodes/button-model.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/base-nodes/return-shortcut.tres" type="ShortCut" id=3]
[ext_resource path="res://assets/textures/controller-sony.png" type="Texture" id=4]
[ext_resource path="res://ui/settings/controls/controller-menu.gd" type="Script" id=5]
[ext_resource path="res://ui/settings/controls/controller-menu-button.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/settings/controls/change-key-dialog-controller.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Control" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
dialog_box = ExtResource( 7 )

[node name="Center" type="CenterContainer" parent="."]
margin_left = 228.0
margin_top = 70.0
margin_right = 796.0
margin_bottom = 506.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Center"]
margin_right = 568.0
margin_bottom = 436.0

[node name="MenuPanel" parent="Center/Margin" instance=ExtResource( 1 )]
margin_right = 568.0
margin_bottom = 436.0

[node name="Menu" type="MarginContainer" parent="Center/Margin"]
margin_right = 568.0
margin_bottom = 436.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="Menu" type="VBoxContainer" parent="Center/Margin/Menu"]
margin_left = 12.0
margin_top = 12.0
margin_right = 556.0
margin_bottom = 424.0

[node name="Scheme" type="HBoxContainer" parent="Center/Margin/Menu/Menu"]
margin_right = 544.0
margin_bottom = 224.0

[node name="LeftList" type="VBoxContainer" parent="Center/Margin/Menu/Menu/Scheme"]
margin_right = 76.0
margin_bottom = 224.0
custom_constants/separation = 10

[node name="L2" parent="Center/Margin/Menu/Menu/Scheme/LeftList" instance=ExtResource( 6 )]
margin_right = 76.0
margin_bottom = 22.0
focus_neighbour_left = NodePath("../../RightList/R2")
focus_neighbour_top = NodePath("../../../Return")
focus_neighbour_right = NodePath("../../RightList/R2")
focus_neighbour_bottom = NodePath("../L1")

[node name="L1" parent="Center/Margin/Menu/Menu/Scheme/LeftList" instance=ExtResource( 6 )]
margin_top = 32.0
margin_right = 76.0
margin_bottom = 54.0
focus_neighbour_left = NodePath("../../RightList/R1")
focus_neighbour_top = NodePath("../L2")
focus_neighbour_right = NodePath("../../RightList/R1")
focus_neighbour_bottom = NodePath("../Up")
button = "L"

[node name="Up" parent="Center/Margin/Menu/Menu/Scheme/LeftList" instance=ExtResource( 6 )]
margin_top = 64.0
margin_right = 76.0
margin_bottom = 86.0
focus_neighbour_left = NodePath("../../RightList/Up Button")
focus_neighbour_top = NodePath("../L1")
focus_neighbour_right = NodePath("../../RightList/Up Button")
focus_neighbour_bottom = NodePath("../Right")
disabled = true
button = "DPAD Up"

[node name="Right" parent="Center/Margin/Menu/Menu/Scheme/LeftList" instance=ExtResource( 6 )]
margin_top = 96.0
margin_right = 76.0
margin_bottom = 118.0
focus_neighbour_left = NodePath("../../RightList/Right Button")
focus_neighbour_top = NodePath("../Up")
focus_neighbour_right = NodePath("../../RightList/Right Button")
focus_neighbour_bottom = NodePath("../Left")
disabled = true
button = "DPAD Right"

[node name="Left" parent="Center/Margin/Menu/Menu/Scheme/LeftList" instance=ExtResource( 6 )]
margin_top = 128.0
margin_right = 76.0
margin_bottom = 150.0
focus_neighbour_left = NodePath("../../RightList/Left Button")
focus_neighbour_top = NodePath("../Right")
focus_neighbour_right = NodePath("../../RightList/Left Button")
focus_neighbour_bottom = NodePath("../Down")
disabled = true
button = "DPAD Left"

[node name="Down" parent="Center/Margin/Menu/Menu/Scheme/LeftList" instance=ExtResource( 6 )]
margin_top = 160.0
margin_right = 76.0
margin_bottom = 182.0
focus_neighbour_left = NodePath("../../RightList/Down Button")
focus_neighbour_top = NodePath("../Left")
focus_neighbour_right = NodePath("../../RightList/Down Button")
focus_neighbour_bottom = NodePath("../Select")
disabled = true
button = "DPAD Down"

[node name="Select" parent="Center/Margin/Menu/Menu/Scheme/LeftList" instance=ExtResource( 6 )]
margin_top = 192.0
margin_right = 76.0
margin_bottom = 214.0
focus_neighbour_left = NodePath("../../RightList/Start")
focus_neighbour_top = NodePath("../Down")
focus_neighbour_right = NodePath("../../RightList/Start")
focus_neighbour_bottom = NodePath("../../../MenuAccept")
button = "Select"

[node name="Sprite" type="TextureRect" parent="Center/Margin/Menu/Menu/Scheme"]
margin_left = 80.0
margin_right = 464.0
margin_bottom = 224.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="RightList" type="VBoxContainer" parent="Center/Margin/Menu/Menu/Scheme"]
margin_left = 468.0
margin_right = 544.0
margin_bottom = 224.0
custom_constants/separation = 10

[node name="R2" parent="Center/Margin/Menu/Menu/Scheme/RightList" instance=ExtResource( 6 )]
margin_right = 76.0
margin_bottom = 22.0
focus_neighbour_left = NodePath("../../LeftList/L2")
focus_neighbour_top = NodePath("../../../Return")
focus_neighbour_right = NodePath("../../LeftList/L2")
focus_neighbour_bottom = NodePath("../R1")
button = "R2"

[node name="R1" parent="Center/Margin/Menu/Menu/Scheme/RightList" instance=ExtResource( 6 )]
margin_top = 32.0
margin_right = 76.0
margin_bottom = 54.0
focus_neighbour_left = NodePath("../../LeftList/L1")
focus_neighbour_top = NodePath("../R2")
focus_neighbour_right = NodePath("../../LeftList/L1")
focus_neighbour_bottom = NodePath("../Up Button")
button = "R"

[node name="Up Button" parent="Center/Margin/Menu/Menu/Scheme/RightList" instance=ExtResource( 6 )]
margin_top = 64.0
margin_right = 76.0
margin_bottom = 86.0
focus_neighbour_left = NodePath("../../LeftList/Up")
focus_neighbour_top = NodePath("../R1")
focus_neighbour_right = NodePath("../../LeftList/Up")
focus_neighbour_bottom = NodePath("../Right Button")
button = "Face Button Top"

[node name="Right Button" parent="Center/Margin/Menu/Menu/Scheme/RightList" instance=ExtResource( 6 )]
margin_top = 96.0
margin_right = 76.0
margin_bottom = 118.0
focus_neighbour_left = NodePath("../../LeftList/Right")
focus_neighbour_top = NodePath("../Up Button")
focus_neighbour_right = NodePath("../../LeftList/Right")
focus_neighbour_bottom = NodePath("../Left Button")
button = "Face Button Left"

[node name="Left Button" parent="Center/Margin/Menu/Menu/Scheme/RightList" instance=ExtResource( 6 )]
margin_top = 128.0
margin_right = 76.0
margin_bottom = 150.0
focus_neighbour_left = NodePath("../../LeftList/Left")
focus_neighbour_top = NodePath("../Right Button")
focus_neighbour_right = NodePath("../../LeftList/Left")
focus_neighbour_bottom = NodePath("../Down Button")
button = "Face Button Right"

[node name="Down Button" parent="Center/Margin/Menu/Menu/Scheme/RightList" instance=ExtResource( 6 )]
margin_top = 160.0
margin_right = 76.0
margin_bottom = 182.0
focus_neighbour_left = NodePath("../../LeftList/Down")
focus_neighbour_top = NodePath("../Left Button")
focus_neighbour_right = NodePath("../../LeftList/Down")
focus_neighbour_bottom = NodePath("../Start")
button = "Face Button Bottom"

[node name="Start" parent="Center/Margin/Menu/Menu/Scheme/RightList" instance=ExtResource( 6 )]
margin_top = 192.0
margin_right = 76.0
margin_bottom = 214.0
focus_neighbour_left = NodePath("../../LeftList/Select")
focus_neighbour_top = NodePath("../Down Button")
focus_neighbour_right = NodePath("../../LeftList/Select")
focus_neighbour_bottom = NodePath("../../../MenuAccept")
button = "Start"

[node name="MenuAccept" parent="Center/Margin/Menu/Menu" instance=ExtResource( 2 )]
margin_top = 228.0
margin_right = 544.0
margin_bottom = 250.0
focus_neighbour_top = NodePath("../Scheme/RightList/Start")
focus_neighbour_bottom = NodePath("../MenuCancel")
size_flags_horizontal = 5
text = "Menu Accept:"
align = 0

[node name="MenuCancel" parent="Center/Margin/Menu/Menu" instance=ExtResource( 2 )]
margin_top = 254.0
margin_right = 544.0
margin_bottom = 276.0
focus_neighbour_top = NodePath("../MenuAccept")
focus_neighbour_bottom = NodePath("../Defaults")
size_flags_horizontal = 5
text = "Menu Cancel:"
align = 0

[node name="HSeparator" type="HSeparator" parent="Center/Margin/Menu/Menu"]
margin_top = 280.0
margin_right = 544.0
margin_bottom = 288.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 8

[node name="Defaults" parent="Center/Margin/Menu/Menu" instance=ExtResource( 2 )]
margin_top = 292.0
margin_right = 544.0
margin_bottom = 314.0
focus_neighbour_top = NodePath("../MenuCancel")
focus_neighbour_bottom = NodePath("../Model")
size_flags_horizontal = 5
text = "Restore Defaults"
align = 0

[node name="HSeparator2" type="HSeparator" parent="Center/Margin/Menu/Menu"]
margin_top = 318.0
margin_right = 544.0
margin_bottom = 334.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 16

[node name="Model" parent="Center/Margin/Menu/Menu" instance=ExtResource( 2 )]
margin_left = 226.0
margin_top = 338.0
margin_right = 318.0
margin_bottom = 360.0
focus_neighbour_top = NodePath("../Defaults")
focus_neighbour_bottom = NodePath("../ChangeLayout")
text = "Model"

[node name="ChangeLayout" parent="Center/Margin/Menu/Menu" instance=ExtResource( 2 )]
margin_left = 162.0
margin_top = 364.0
margin_right = 382.0
margin_bottom = 386.0
focus_neighbour_top = NodePath("../Model")
focus_neighbour_bottom = NodePath("../Return")
text = "Change Layout"

[node name="Return" parent="Center/Margin/Menu/Menu" instance=ExtResource( 2 )]
margin_left = 218.0
margin_top = 390.0
margin_right = 326.0
margin_bottom = 412.0
focus_neighbour_top = NodePath("../ChangeLayout")
focus_neighbour_bottom = NodePath("../Scheme/RightList/R2")
shortcut = ExtResource( 3 )
text = "Return"
[connection signal="pressed" from="Center/Margin/Menu/Menu/Defaults" to="." method="_on_Defaults_pressed"]
[connection signal="pressed" from="Center/Margin/Menu/Menu/ChangeLayout" to="." method="_on_ChangeLayout_pressed"]
[connection signal="pressed" from="Center/Margin/Menu/Menu/Return" to="." method="_on_Return_pressed"]
